--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,39 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: -.5px;
+    transition: background-color 1.5s ease, color .8s ease !important;
 
+
+
+}
+
+body,
+#navbar {
+    transition: background-color 1.5s ease;
+    /* Add a smooth transition effect */
 }
 
 .primary {
     color: skyblue;
 }
+
 p {
     font-size: 1.25rem;
 }
+
 a {
-    text-decoration: none!important;
-    color: black!important;
-}
-h1 {
-    
+    text-decoration: none !important;
+    color: black !important;
 }
 
+h1 {}
+
 h2 {
-    font-size: 3rem!important;
+    font-size: 3rem !important;
 }
 
 h3 {
-    font-size: 2.75rem!important;
+    font-size: 2.75rem !important;
 }
 
 .bold {
@@ -31,14 +41,22 @@ h3 {
 }
 
 .highlight {
-   color: skyblue;
-   font-weight: 600;
-    
+    color: skyblue;
+    font-weight: 600;
+
 }
+
 .logo {
+    display: block;
     font-size: 1.75rem;
     font-weight: 400;
 }
+
+.logo-adjust {
+    position: relative;
+    height: 2rem;
+}
+
 .navLabels {
     font-size: 1.5rem;
     display: flex;
@@ -46,74 +64,144 @@ h3 {
 }
 
 #navbar {
+
     padding-top: 1.5rem;
     padding-bottom: .5rem;
     justify-content: space-around;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.02);
 }
 
+#navbar-ux-cs-landing {
+    transition: background-color 1.5s ease, color .8s ease !important;
+    background-color: white;
+    padding-top: 1.5rem;
+    padding-bottom: .5rem;
+    justify-content: space-around;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.02);
+}
+
+.sticky-nav {
+    position: sticky;
+    top: 0;
+    /* Stick the navigation bar to the top of the viewport */
+    width: 100%;
+    /* Ensure the navigation bar spans the full width of the viewport */
+    background-color: #ffffff;
+    /* Optional: Add background color */
+    z-index: 1000;
+    /* Optional: Specify a z-index to ensure the navigation bar appears above other content */
+}
+
 .greeting {
-   font-size: 5rem;
+    font-size: 5rem;
 }
 
 .greeting-p {
     width: 38rem;
 }
+
 .self-portrait-container {
     position: relative;
 }
+
 .self-portrait {
     position: absolute;
     bottom: 0;
- 
-   
+
+
 }
+
 #landing-section-1 {
     height: 50rem;
-  
-}
-#cs-rr-section-1 {
-    height: 50rem;
-  
-}
-#about-section-1 {
-    height: 50rem;
-  
-}
-#about-section-1-text {
-    padding-left: 14rem;
-    padding-top: 10rem;
-  
-}
-#landing-section-1-text {
-    padding-left: 14rem;
-    padding-top: 20rem;
-}
-#rr-1-subtext-1 {
-    width:26rem;
-    line-height: 1!important;
-}
-#rr-1-subtext-2 {
 
-    line-height: 1.5!important;
-    padding-top: 3rem;
 }
-#rr-1-text {
-    padding-left: 14rem;
-    padding-top: 6rem;
+
+/* case studies: Rescue Riders START */
+
+/* cs-rr global formatting */
+.cs-rr-style {
+    height: 50rem;
 }
-#rr-1-text h6 {
+
+.cs-rr-text-container {
+    padding-left: 14rem !important;
+    padding-top: 6rem !important;
+}
+
+.cs-rr-style-text {
+    width: 26rem;
+    line-height: 1 !important;
+
+}
+
+.cs-rr-style-text h6 {
     font-size: 1.25rem;
     font-weight: 200;
     letter-spacing: .0125rem;
- 
 }
-#rr-1-text h7 {
+
+.cs-rr-style-text h7 {
     font-size: 2rem;
     font-weight: 600;
     margin-top: -.5rem;
     letter-spacing: -.05rem;
- }
+}
+
+.cs-rr-style-subtext-2 {
+    line-height: 1.5 !important;
+    padding-top: 3rem;
+}
+
+/* slide 1 */
+
+#cs-rr-section-1 {}
+
+
+
+
+/* slide 2 */
+#cs-rr-section-2 {}
+
+
+
+
+/* slide 3 */
+#cs-rr-section-3 {}
+
+
+
+/* slide 4 */
+#cs-rr-section-4 {}
+
+
+/* slide 5 */
+#cs-rr-section-5 {}
+
+/* slide 6 */
+#cs-rr-section-6 {}
+
+/* slide 7 */
+#cs-rr-section-7 {}
+
+
+/* case studies: Rescue Riders END */
+
+#about-section-1 {
+    height: 50rem;
+
+}
+
+#about-section-1-text {
+    padding-left: 14rem;
+    padding-top: 10rem;
+
+}
+
+#landing-section-1-text {
+    padding-left: 14rem;
+    padding-top: 20rem;
+}
+
 
 #landing-section-2 {
     background-color: black;
@@ -122,78 +210,114 @@ h3 {
 
 }
 
+#ux-cs-landing-section-1 {
+    background-color: white;
+    color: black;
+    padding-bottom: 10rem;
+    transition: background-color 1.1s ease, color .9s ease !important;
+
+}
+
 #landing-section-2-text {
 
     padding-left: 14rem;
     padding-top: 10rem;
-   
+
 }
+
+#ux-cs-landing-section-1-text {
+    text-align: center;
+    padding-top: 10rem;
+
+}
+
 #case-preview-styles {
     padding-top: 3rem;
-    justify-content: center!important;
+    justify-content: center !important;
+}
+
+#ux-cs-landing-preview-styles {
+    padding-top: 3rem;
+    justify-content: center !important;
+}
+
+.ux-cs-landing-preview-container {
+    align-content: space-between;
+    height: 56rem;
+
 }
 
 .case-preview-container {
     align-content: space-between;
     height: 56rem;
-   
+
 }
 
 
 
 .case-preview {
     padding-top: 4.56rem;
-    padding-bottom: 3.94rem!important;
-    padding-left: 5.94rem!important;
-    padding-left: 6.42rem!important;
+    padding-bottom: 3.94rem !important;
+    padding-left: 5.94rem !important;
+    padding-left: 6.42rem !important;
     background-color: white;
-    color: black!important;
+    color: black !important;
     height: 24rem;
-    width: 70rem!important;
-    border-radius: 2.5rem!important;
+    width: 70rem !important;
+    border-radius: 2.5rem !important;
     position: relative;
 }
 
-.case-preview h4 {
- 
-  
+.ux-cs-landing-case-preview {
+    padding-top: 4.56rem;
+    padding-bottom: 3.94rem !important;
+    padding-left: 5.94rem !important;
+    padding-left: 6.42rem !important;
+    background-color: white;
+    color: black !important;
+    height: 24rem;
+    width: 70rem !important;
+    border-radius: 2.5rem !important;
+    position: relative;
+    box-shadow: 2px 10px 16px 8px rgba(0, 0, 0, 0.15);
 }
-.case-preview h3 {
-   
-}
+
+.case-preview h4 {}
+
+.case-preview h3 {}
+
 .caseCTA {
-    border-radius: 40rem!important;
-    padding: 1rem 2.5rem!important;
-    
-}
-
-.title-subtitle-group {
-   
-}
-.case-prev-text-group {
-    
-}
-.image-wrap-holder {
+    border-radius: 40rem !important;
+    padding: 1rem 2.5rem !important;
 
 }
+
+.title-subtitle-group {}
+
+.case-prev-text-group {}
+
+.image-wrap-holder {}
+
 .image-wrapper {
 
     width: 18.4375rem;
     height: 25.75rem;
     /* Make the image wrapper full height of the card */
-    overflow: hidden!important;
+    overflow: hidden !important;
     /* Clip the image within the wrapper */
     z-index: -100;
-    transform: translateY(5%)!important;
+    transform: translateY(5%) !important;
     background-color: white;
- }
- .wrap {
-    margin-top:-4.5rem!important;
+}
+
+.wrap {
+    margin-top: -4.5rem !important;
     width: 18.4375rem;
     height: 24rem;
-    overflow: hidden!important;
- }
- .clipped-image {
+    overflow: hidden !important;
+}
+
+.clipped-image {
     /* Make the image full width of the wrapper */
     height: 100%;
     width: 100%;
@@ -203,17 +327,16 @@ h3 {
     /* Position the image absolutely within the wrapper */
     object-fit: none;
     /* Maintain aspect ratio and cover the entire wrapper */
-    padding-left: 1.5rem!important;
+    padding-left: 1.5rem !important;
     transform: translateY(7%);
     filter: saturate(0%)
+        /* Center the image vertically */
 
-    /* Center the image vertically */
-   
-   
-    /* Adjust the vertical position */
- }
- 
- @keyframes card-phone-rise {
+
+        /* Adjust the vertical position */
+}
+
+@keyframes card-phone-rise {
     from {
         transform: translateY(7%);
         filter: saturate(0%);
@@ -226,50 +349,75 @@ h3 {
 }
 
 #studiyoPrev {
-    background-image: none;  
-    background-size: cover; /* Scale the background image to cover the entire container */
+    background-image: none;
+    background-size: cover;
+    /* Scale the background image to cover the entire container */
     background-position: center;
 
 }
- #studiyoPrev:hover .clipped-image {
+
+
+#studiyoPrev:hover .clipped-image {
     animation-name: card-phone-rise;
     animation-duration: 1.2s;
     animation-play-state: initial;
     /*transform: translateY(-40%);*/
     -webkit-animation-fill-mode: forwards;
-    }
-  #rrPrev:hover .clipped-image {
+}
+
+#rrPrev:hover .clipped-image {
     animation-name: card-phone-rise;
     animation-duration: 1.2s;
     animation-play-state: initial;
     /*transform: translateY(-40%);*/
     -webkit-animation-fill-mode: forwards;
-    }
+}
 
 #studiyoPrev:hover {
     animation-name: studiyo-bg-change;
     animation-duration: 1s;
+    -webkit-animation-fill-mode: forwards;
 }
 
 .case-preview-text {
     width: 32rem;
-    align-content: space-between 2.19rem!important;
+    align-content: space-between 2.19rem !important;
 }
+
 #studiyoCTA {
     background: skyblue;
     color: white;
     font-weight: 500;
 }
+
 #studiyoPrev:hover #studiyoCTA {
     animation: sdiyo-CTA-color-change forwards;
     animation-duration: 1.2s;
     font-weight: 500;
 }
+
+
 #rrPrev:hover #rrCTA {
     animation: rr-CTA-color-change forwards;
     animation-duration: 1.2s;
     font-weight: 500;
 }
+
+
+
+.doodle {
+    scale: 30%;
+    transform: translateY(-140%);
+}
+
+.doodleseen {
+    display: block;
+}
+
+.doodlehidden {
+    display: none;
+}
+
 @keyframes rr-CTA-color-change {
     from {
         background-color: grey;
@@ -285,14 +433,16 @@ h3 {
 
 @keyframes sdiyo-bg-change {
     from {
-        background-image:none ;
+        background-image: none;
     }
+
     to {
-        background-image: url('css/images/sdiyo-scissors.svg');
+        background-image: url('/css/images/scissorslighter.svg');
         background-size: cover;
         background-position: center;
     }
 }
+
 @keyframes sdiyo-CTA-color-change {
     from {
         background-color: skyblue;
@@ -305,6 +455,7 @@ h3 {
         font-weight: 600;
     }
 }
+
 #rrCTA {
     background: skyblue;
     color: white;
@@ -324,43 +475,82 @@ h3 {
 }
 
 #work-section-1 {
-    height: 50rem!important;
+    height: 50rem !important;
 }
-#work-section-1 h1{
+
+#writing-section-1 {
+    height: 50rem !important;
+}
+
+.writing-descr {
+    padding-left: .75rem;
+}
+
+#writing-section-1 h1 {
+    font-size: 4rem;
+    text-align: center;
+    padding-top: 6rem;
+    padding-bottom: 3rem;
+}
+
+
+#work-section-1 h1 {
     font-size: 4rem;
     text-align: center;
     padding-top: 14rem;
     padding-bottom: 3rem;
 }
-#work-section-1 h2{
-    font-size: 2.5rem!important;
-    padding-top: 1.5rem;
-    padding-left: 1.5rem;
-  
 
-   
-}
-#writing-section-1 h2{
-    font-size: 2.5rem!important;
+#work-section-1 h2 {
+    font-size: 2.5rem !important;
     padding-top: 1.5rem;
     padding-left: 1.5rem;
-  
+
+
+
 }
+
+#tertiary-nav h2 {
+    font-size: 1rem !important;
+}
+
+#tertiary-nav {
+    margin-left: 3.75rem;
+}
+
+#writing-section-1 h2 {
+    font-size: 2.5rem !important;
+    padding-top: 1.5rem;
+    padding-left: 1.5rem;
+
+}
+
 .writing-cards {
-    justify-content: center!important;
-    padding-bottom: 20rem!important;
+    justify-content: center !important;
+    padding-bottom: 20rem !important;
 }
+
+
 
 .work-cards {
-    justify-content: center!important;
-    padding-bottom: 20rem!important;
+    justify-content: center !important;
+    padding-bottom: 20rem !important;
 }
+
 .work-card {
-   border-radius: 25px;
-   height: 20rem;
+    border-radius: 25px;
+    height: 20rem;
     background-color: skyblue;
-    width: 30rem!important;
-    margin: 2rem 1rem!important;
+    width: 30rem !important;
+    margin: 2rem 1rem !important;
+}
+
+.writing-card {
+    border-radius: 25px;
+    height: 21.75rem !important;
+    background-color: skyblue;
+    width: 30rem !important;
+    margin: 2rem 1rem !important;
 }
 
 .work-card:hover {
@@ -370,33 +560,122 @@ h3 {
 
 }
 
+.writing-links {
+    justify-content: center !important;
+}
 
- 
+.writing-link {
+    width: 28rem !important;
+    background-color: white;
+    color: black !important;
+    border-radius: 25px !important;
+    padding-top: .25rem !important;
+    padding-bottom: 1rem !important;
+    margin-top: .5rem !important;
+    margin-left: .75rem !important;
+    margin-right: .75rem !important;
+}
+
+.writing-card:hover .writing-link {
+    animation-name: writiing-link-color-change forwards;
+    animation-duration: 1.2s;
+}
+
+#blog-link-1 h2 {
+    font-size: 1.5rem !important;
+}
+
+#blog-link-2 h2 {
+    font-size: 1.5rem !important;
+}
+
+#research-link-1 h2 {
+    font-size: 1.5rem !important;
+}
+
+#research-link-2 h2 {
+    font-size: 1.5rem !important;
+}
+
+#essays-link-1 h2 {
+    font-size: 1.5rem !important;
+}
+
+#essays-link-2 h2 {
+    font-size: 1.5rem !important;
+}
+
+.writing-card:hover {
+    animation: work-card-color-change forwards;
+    animation-duration: 1s;
+
+
+}
+
+@keyframes writing-link-color-change {
+    from {
+        background-color: white;
+        color: black;
+    }
+
+    to {
+        background: skyblue !important;
+        color: black !important;
+
+    }
+}
+
 .writing-card {
     height: 20rem;
-    width:20rem;
+    width: 20rem;
     background-color: skyblue;
-    width: 30rem!important;
-    margin: 2rem 1rem!important;
+    width: 30rem !important;
+    margin: 2rem 1rem !important;
     border-radius: 25px;
 }
+
 #writing-blog {
     background-color: red;
 }
+
 #writing-research {
     background-color: blue;
 }
+
 .work-descr-hidden {
     display: none;
-    color: white!important;
+    color: white !important;
 }
+
 .work-card:hover .work-descr-hidden {
     padding-right: 1.75rem;
-    padding-top: 5rem!important;
+    padding-top: 5rem !important;
     text-align: right;
     display: block;
 
 }
+
+.work-card:hover .doodlehidden {
+
+    display: block;
+
+}
+
+.work-card:hover .doodleseen {
+    display: none;
+
+}
+
+@keyframes doodle-transition-hidden {
+    from {
+        display: none;
+    }
+
+    to {
+        display: block;
+    }
+}
+
 
 
 
@@ -406,11 +685,25 @@ h3 {
         background-color: skyblue;
         color: black;
     }
+
     to {
         background-color: black;
         color: white;
     }
 }
+
+@keyframes writing-card-color-change {
+    from {
+        background-color: skyblue;
+        color: black;
+    }
+
+    to {
+        background-color: black;
+        color: white;
+    }
+}
+
 #footer {
     height: 28rem;
     background-color: lightskyblue;
@@ -423,18 +716,18 @@ h3 {
     width: 28rem;
 }
 
-.footer-form-container {
-   
-}
+.footer-form-container {}
+
 .form-control {
-    margin-bottom: .5rem!important;
-    border-radius: 40px!important;
-    padding: .75rem!important;
-    padding-left: 1.25em!important;
+    margin-bottom: .5rem !important;
+    border-radius: 40px !important;
+    padding: .75rem !important;
+    padding-left: 1.25em !important;
 
 }
+
 #footer-form-message {
     height: 4rem;
-    text-align: start!important;
+    text-align: start !important;
 
 }
