--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,28 @@ h3 {
     transition: background-color 1.1s ease, color .9s ease !important;
 
 }
+#art-landing-section-1 {
+    background-color: white;
+    color: black;
+    padding-bottom: 10rem;
+    
 
+}
+.art-text {
+  
+    padding: 2rem 1.5rem;
+    box-shadow: 2px 2px 10px 6px rgba(0, 0, 0, 0.08);
+    border-radius: 20px 20px 20px 0px;
+}
+#art-landing-section-1 h4{
+   font-size: 1.5rem!important;
+}
+
+#art-landing-section-1 h3{
+    font-size: 1rem!important;
+    font-weight: 300;
+    margin-top: -.5rem;
+ }
 #landing-section-2-text {
 
     padding-left: 14rem;
