--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,19 @@ body {
     letter-spacing: -.5px;
     transition: background-color 1.5s ease, color .8s ease !important;
 
-
-
 }
 
 body,
 #navbar {
     transition: background-color 1.5s ease;
     /* Add a smooth transition effect */
+}
+
+#navbar-split-bg {
+    background-color: white!important;
+    padding-top: 1.5rem;
+    padding-bottom: .5rem;
+    transition: background-color 1.5s ease;
 }
 
 .primary {
@@ -36,6 +41,10 @@ h3 {
     font-size: 2.75rem !important;
 }
 
+h8 {
+    font-size: 1.15rem;
+    font-weight: 600;
+}
 .bold {
     font-weight: 700;
 }
@@ -81,10 +90,12 @@ h3 {
 }
 
 .sticky-nav {
+  
+    opacity: 90%;
     position: sticky;
     top: 0;
     /* Stick the navigation bar to the top of the viewport */
-    width: 100%;
+    width: 101%!important;
     /* Ensure the navigation bar spans the full width of the viewport */
     background-color: #ffffff;
     /* Optional: Add background color */
@@ -107,6 +118,9 @@ h3 {
 .self-portrait {
     position: absolute;
     bottom: 0;
+    z-index: -100;
+    padding-left: 8rem;
+    scale: 125%;
 
 
 }
@@ -121,6 +135,7 @@ h3 {
 /* cs-rr global formatting */
 .cs-rr-style {
     height: 50rem;
+    display: block;
 }
 
 .cs-rr-text-container {
@@ -155,62 +170,124 @@ h3 {
 /* slide 1 */
 
 #cs-rr-section-1 {}
+
 #rr-1-petfriends {
     scale: 70%;
     padding-right: 6rem;
 
-    padding-bottom: 6rem!important;
+    padding-bottom: 6rem !important;
 }
 
 
 
 /* slide 2 */
-#cs-rr-section-2 {}
+#cs-rr-section-2 {
+    
+}
 
-
-
-
+#cs-rr-section-2-img1 {
+    scale: 80%;
+    margin-left: -2rem!important;
+}
+#cs-rr-section-2-split-bg {
+    background-color: white!important;
+}
+#cs-rr-section-2-img2 {
+    scale: 50%;
+    margin-left: -4rem!important;
+}
 /* slide 3 */
 #cs-rr-section-3 {}
+
 .rr-section-3-card-container {
     flex-wrap: nowrap;
+    justify-content: center;
+    margin-top: -2.5rem!important;
+}
+
+.rr-section-3-banners-container {
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-top: -2.5rem!important;
 }
 .rr-section-3-card {
-   justify-content: center!important;
-   text-justify: center!important;
-    color: white!important;
-    width: 10rem;
+    justify-self: center!important;
+    text-justify: center!important;
+    color: white !important;
     height: 16rem;
     flex-shrink: 0;
     background-color: #122B37;
-    padding: 2rem 4rem!important;
-
+    width: 22rem!important;
+    margin: 0rem 1.5rem;
   
 }
 
+.rr-section-3-card {
+    justify-self: center!important;
+    text-justify: center!important;
+    color: white !important;
+    height: 16rem;
+    flex-shrink: 0;
+    background-color: #122B37;
+    width: 22rem!important;
+    margin: 0rem 1.5rem;
+  
+}
 .rr-section-3-banners {
+    justify-self: center!important;
+    flex-shrink: 0;
     background-color: #618291;
-    width: 100%!important;
+    width: 22rem!important;
     height: 4.625rem;
-    
+    margin-left: 1.5rem!important;
+    margin-right: 1.5rem!important;
+  
+
+
 }
-#rr-upper-radius {
-    
+
+.rr-section-3-banners-container {
+    justify-content: space-between 1.5rem!important;
+    display: flex;
 }
+#rr-upper-radius {}
+
 .rr-section-3-upper {
-    border-radius: 1000rem 1000rem 0rem 0rem!important;
-    background-color:#122B37 ;
-    height: 18rem;
-    
+    border-radius: 600rem 600rem 0rem 0rem !important;
+    background-color: #122B37;
+    height: 12rem;
+    width: 22rem!important;
+    margin: 0rem 1.5rem;
+
 }
-.rr-section-3-text {
-    width: 18rem;
-    text-align: center;
+
+#rr-section-3-upper-containter {
+    justify-content: center;
 }
+
+.rr-section-3-text p {
+    padding: 1.25rem 1.75rem;
+    text-align: center!important;
+    justify-content: center!important;
+}
+
+#rr-section-3-banner-container {
+    margin-top: -6rem!important;
+  
+}
+#rr-section-3-banner-container div {
+    display: grid;
+  
+}
+
 /* slide 4 */
 #cs-rr-section-4 {}
-
-
+#cs-rr-section-4-img1 {
+    scale: 80%;
+}
+#cs-rr-section-4-split-bg {
+    background-color: white!important;
+}
 /* slide 5 */
 #cs-rr-section-5 {}
 
@@ -224,7 +301,7 @@ h3 {
 /* case studies: Rescue Riders END */
 
 #about-section-1 {
-    height: 50rem;
+    height: 30rem;
 
 }
 
@@ -236,10 +313,23 @@ h3 {
 
 #landing-section-1-text {
     padding-left: 14rem;
-    padding-top: 20rem;
+    padding-top: 16rem;
 }
 
+.skills-prev {
+    background-color: white;
+    justify-content: center;
+    flex-wrap: nowrap!important;
+    padding-left: 2.15rem;
+}
 
+.skill-item {
+    padding-top: 4rem;
+    height:8rem;
+    background-color: grey;
+    margin: 0rem 1rem 1rem 0rem;
+    
+}
 #landing-section-2 {
     background-color: black;
     color: white;
@@ -247,6 +337,26 @@ h3 {
 
 }
 
+#about-section-2 {
+    background-color: black;
+    color: white;
+    padding-bottom: 6rem;
+
+}
+
+#about-section-3 {
+    background-color: skyblue;
+    color: black;
+    padding-bottom: 6rem;
+
+}
+
+#about-section-4 {
+    background-color: white;
+    color: black;
+    padding-bottom: 6rem;
+
+}
 #ux-cs-landing-section-1 {
     background-color: white;
     color: black;
@@ -254,28 +364,32 @@ h3 {
     transition: background-color 1.1s ease, color .9s ease !important;
 
 }
+
 #art-landing-section-1 {
     background-color: white;
     color: black;
     padding-bottom: 10rem;
-    
+
 
 }
+
 .art-text {
-  
+
     padding: 2rem 1.5rem;
     box-shadow: 2px 2px 10px 6px rgba(0, 0, 0, 0.08);
     border-radius: 20px 20px 20px 0px;
 }
-#art-landing-section-1 h4{
-   font-size: 1.5rem!important;
+
+#art-landing-section-1 h4 {
+    font-size: 1.5rem !important;
 }
 
-#art-landing-section-1 h3{
-    font-size: 1rem!important;
+#art-landing-section-1 h3 {
+    font-size: 1rem !important;
     font-weight: 300;
     margin-top: -.5rem;
- }
+}
+
 #landing-section-2-text {
 
     padding-left: 14rem;
@@ -538,7 +652,7 @@ h3 {
 
 
 #work-section-1 a:hover {
-    color: white!important;
+    color: white !important;
 
 }
 
@@ -546,7 +660,25 @@ h3 {
 #writing-section-1 {
     height: 50rem !important;
 }
+.writing-skill-item-container {
+    justify-content: center!important;
+}
 
+.ux-skill-item-container {
+    justify-content: center!important;
+}
+.writing-skill-item {
+    background-color: grey;
+    width: 10rem!impoRTANT;
+    padding: 1rem 2rem!important;
+    margin: .5rem .5rem;
+}
+.ux-skill-item {
+    background-color: grey;
+    width: 10rem!impoRTANT;
+    padding: 1rem 2rem!important;
+    margin: .5rem .5rem;
+}
 .writing-descr {
     padding-left: .75rem;
 }
@@ -776,6 +908,14 @@ h3 {
     padding-top: 12rem;
     padding-bottom: 12rem;
 }
+#footer-ux-cs-landing {
+    transition: background-color 1.5s ease, color .8s ease !important;
+    height: 28rem;
+    background-color: lightskyblue;
+    padding-left: 14rem;
+    padding-top: 12rem;
+    padding-bottom: 12rem;
+}
 
 #footer-form {
     width: 28rem;
@@ -797,3 +937,8 @@ h3 {
 
 }
 
+ /* Media query for mobile devices */
+ @media (max-width: 576px) {
+   
+   
+  }
