--- a/css/styles.css
+++ b/css/styles.css
@@ -195,12 +195,12 @@ h8 {
 
 #cs-rr-section-2-img2 {
     scale: 90%;
-    margin-left: -8rem!important;
+    margin-left: -8rem !important;
 }
 
 /* slide 3 */
 #cs-rr-section-3 {
-    flex-wrap: none!important;
+    flex-wrap: none !important;
 }
 
 .rr-section-3-card-container {
@@ -542,6 +542,7 @@ h8 {
 }
 
 
+
 #studiyoPrev:hover .clipped-image {
     animation-name: card-phone-rise;
     animation-duration: 1.2s;
@@ -880,6 +881,85 @@ h8 {
 
 }
 
+
+#5-block-test {
+
+    display: flex;
+    height: 445px;
+    padding: 0px 189px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 23px;
+    flex-shrink: 0;
+    flex-wrap: nowrap;
+}
+
+.block-test-textbox {
+   
+    height: auto;
+}
+
+.block-test-item h2 {
+    align-self: stretch;
+    color: #193559;
+    font-family: Helvetica;
+    font-size: 20px !important;
+    font-weight: 600;
+    line-height: 35px;
+    /* 175% */
+}
+
+.block-test-item {
+    flex: 1;
+    transition: flex 1s ease-in-out, background-color 0.6s ease-in-out;
+    display: flex;
+    height: 248px;
+    padding: 3.125rem 2rem!important;
+    flex-direction: column!important;
+    align-items: flex-start;
+    gap: 2rem;
+    border-radius: 20px;
+    background: #E8F2F9;
+    margin-left: 11px;
+    margin-right: 11px;
+}
+
+.block-test-item:hover p {
+    opacity: 1;
+}
+
+.block-test-item p {
+   font-size: 1rem;
+    width: 14rem;
+    margin-top: -1rem!important;
+    position: relative;
+    opacity: 0;
+    transition: opacity 1s ease-in-out; 
+}
+.block-test-hovered {
+    
+    background: white;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.15)!important;
+    
+}
+.block-test-not-hovered {
+    background: lightskyblue;
+    color: black!important;
+   
+}
+.block-test-purple {
+    background: #E8F2F9;
+}
+
+
+
+
+
+
+
+
+
+
 @keyframes doodle-transition-hidden {
     from {
         display: none;
@@ -915,6 +995,28 @@ h8 {
     to {
         background-color: black;
         color: white;
+    }
+}
+
+
+@keyframes block-test-color-change {
+    from {
+        background-color: #E4E4F2;
+        color: black;
+    }
+
+    to {
+        background-color: #ADADC9;
+        color: white;
+    }
+}
+@keyframes block-test-shrink {
+    from {
+        width: 245px;
+    }
+
+    to {
+        width: 181px!;
     }
 }
 
@@ -998,7 +1100,7 @@ h8 {
     }
 
     .image-wrapper {
-        display: inline-flex!important;
+        display: inline-flex !important;
         width: 100% !important;
         height: 100%;
         /* Make the image wrapper full height of the card */
@@ -1039,8 +1141,8 @@ h8 {
         background-color: white;
         color: black !important;
         height: 46rem;
-        border-radius: 2rem!important;
-        display: inline-flex!important;
+        border-radius: 2rem !important;
+        display: inline-flex !important;
         margin-bottom: 1rem;
     }
 
@@ -1102,23 +1204,25 @@ h8 {
     /* START work landing mobile */
     #work-section-1 h1 {
         font-size: 1.25rem;
-        
+
     }
+
     #work-section-1 h2 {
-        font-size: 1.5rem!important;
+        font-size: 1.5rem !important;
     }
 
 
-.work-cards {
-    justify-content: center!important;
-    padding-bottom: .5rem!important;
-}
-.work-card {
-    border-radius: 25px;
-    height: 16rem;
-    background-color: skyblue;
+    .work-cards {
+        justify-content: center !important;
+        padding-bottom: .5rem !important;
+    }
 
-}
+    .work-card {
+        border-radius: 25px;
+        height: 16rem;
+        background-color: skyblue;
+
+    }
 
 
     /* END work landing mobile */
@@ -1172,7 +1276,7 @@ h8 {
 
     #cs-rr-section-2-img2 {
         scale: 90%;
-        margin-left: 0rem!important;
+        margin-left: 0rem !important;
     }
 
     #cs-rr-section-2-img1 {
@@ -1180,12 +1284,13 @@ h8 {
     }
 
     .rr-section-3-upper {
-    border-radius: 600rem 600rem 0rem 0rem !important;
-    background-color: #122B37;
-    height: 12rem;
-    width: 22rem !important;
-    margin: 0rem 1.5rem;
+        border-radius: 600rem 600rem 0rem 0rem !important;
+        background-color: #122B37;
+        height: 12rem;
+        width: 22rem !important;
+        margin: 0rem 1.5rem;
 
-}
+    }
+
     /* END rr case study stylinig mobile */
 }
